2nd attempt fixing deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://juliocesar67-web.github.io/e-plantShopping",
+  "homepage": "https://juliocesar67-web.github.io/e-plantShopping/",
   "name": "shoppingcart",
   "private": true,
   "version": "0.0.0",
